@@ -1,12 +1,17 @@
 package org.opendatadiscovery.oddplatform.service;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.opendatadiscovery.oddplatform.api.contract.model.EnumValue;
+import org.apache.commons.collections4.CollectionUtils;
+import org.opendatadiscovery.oddplatform.annotation.ReactiveTransactional;
 import org.opendatadiscovery.oddplatform.api.contract.model.EnumValueFormData;
 import org.opendatadiscovery.oddplatform.api.contract.model.EnumValueList;
 import org.opendatadiscovery.oddplatform.mapper.EnumValueMapper;
-import org.opendatadiscovery.oddplatform.repository.EnumValueRepository;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.EnumValuePojo;
+import org.opendatadiscovery.oddplatform.repository.reactive.ReactiveEnumValueRepository;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -14,28 +19,53 @@ import reactor.core.publisher.Mono;
 @Service
 @RequiredArgsConstructor
 public class EnumValueServiceImpl implements EnumValueService {
-    private final EnumValueRepository enumValueRepository;
+    private final ReactiveEnumValueRepository reactiveEnumValueRepository;
     private final EnumValueMapper mapper;
 
     @Override
+    @ReactiveTransactional
     public Mono<EnumValueList> createEnumValues(final Long datasetFieldId, final List<EnumValueFormData> formData) {
-        return Flux.fromStream(formData.stream())
-            .map(fd -> mapper.mapForm(fd, datasetFieldId))
-            .collectList()
-            .map(list -> enumValueRepository.updateFieldEnumValues(datasetFieldId, list))
-            .map(pojos -> {
-                final List<EnumValue> items = pojos.stream().map(mapper::mapPojo).toList();
-                return new EnumValueList().items(items);
-            });
+        final List<EnumValuePojo> pojos = formData.stream()
+            .map(fd -> mapper.mapToPojo(fd, datasetFieldId))
+            .collect(Collectors.toList());
+
+        final List<String> enumNames = pojos.stream()
+            .map(EnumValuePojo::getName)
+            .collect(Collectors.toList());
+
+        if (hasDuplicates(enumNames)) {
+            return Mono.error(new RuntimeException("There are duplicates in enum values"));
+        }
+
+        final List<Long> idsToKeep = pojos.stream()
+            .map(EnumValuePojo::getId)
+            .filter(Objects::nonNull)
+            .collect(Collectors.toList());
+
+        final Map<Boolean, List<EnumValuePojo>> partitions = pojos.stream()
+            .collect(Collectors.partitioningBy(p -> p.getId() != null));
+
+        return reactiveEnumValueRepository.softDeleteOutdatedEnumValuesExcept(datasetFieldId, idsToKeep)
+            .then(
+                Flux.concat(reactiveEnumValueRepository.bulkUpdate(partitions.get(true)),
+                        reactiveEnumValueRepository.bulkCreate(partitions.get(false)))
+                .map(mapper::mapToEnum)
+                .collectList()
+                .map(list -> new EnumValueList().items(list)));
     }
 
     @Override
     public Mono<EnumValueList> getEnumValues(final Long datasetFieldId) {
-        return Mono.just(datasetFieldId)
-            .map(fieldId -> enumValueRepository.getEnumValuesByFieldId(datasetFieldId))
-            .map(pojos -> {
-                final List<EnumValue> enumValues = pojos.stream().map(mapper::mapPojo).toList();
-                return new EnumValueList().items(enumValues);
-            });
+        return reactiveEnumValueRepository.getEnumValuesByDatasetFieldId(datasetFieldId)
+            .map(mapper::mapToEnum)
+            .collectList()
+            .map(enumValues -> new EnumValueList().items(enumValues));
+    }
+
+    private boolean hasDuplicates(final List<String> sourceList) {
+        if (CollectionUtils.isEmpty(sourceList)) {
+            return false;
+        }
+        return sourceList.stream().distinct().count() != sourceList.size();
     }
 }
